tests/ui/type-qpath-eof6.stderr
error: no rules expected the token `::`
 --> $DIR/type-qpath-eof6.rs:6:24
  |
6 |     input = [{ <T as F>:: }]
  |                        ^^

error: aborting due to previous error

